--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -86,7 +86,7 @@
         </div>
         <div class="col-lg-6">
           <label>Quantity</label>
-          <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
+          <input class="form-control" ng-model="quantity" type="text" min="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500"></input>
           <small class="text-muted">Please enter a numerical value.</small>
         </div>
       </fieldset>
@@ -195,7 +195,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Choose how much inventory to move: </label>
-          <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
+          <input class="form-control" ng-model="quantity" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
           <small class="text-muted"><b>{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</b></small>
         </div>
       </fieldset>
@@ -209,7 +209,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Job Number: </label>
-          <input class="form-control" ng-model="jobNum" type="number" min="0" placeholder="ex. 13421">
+          <input class="form-control" ng-model="jobNum" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
           <small class="text-muted">[Optional]: Please enter in the desired job number.</small>
         </div>
         <div class="col-lg-6">
@@ -243,7 +243,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Choose how much inventory to move: </label>
-          <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
+          <input class="form-control" ng-model="quantity" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
           <small class="text-muted">{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</small>
         </div>
       </fieldset>
