--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -132,8 +132,8 @@
         <fieldset class="form-group">
           <div class="col-lg-4">
             <label>Invoice Number</label>
-            <input class="form-control" type="number" min="0" ng-model="invoiceNumber" placeholder="ex. 34937">
-            <small class="text-muted">Maximum 16 characters</small>
+            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+            <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
             <label>Payment Method</label>
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-4">
             <label>Phone Number</label>
-            <input class="form-control" min="0" type="number" maxlength="10" ng-model="phone" placeholder="ex. 7781921231">
+            <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
             <small class="text-muted">No spaces or dashes</small>
           </div>
         </fieldset>
