--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -1,119 +1,150 @@
 <div class="col-lg-12">
   <h2 class="page-header light-text text-center"></h2>
   <div class="row placeholders">
-      <div class="container">
-        <div class="panel-container">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <div class="panel-heading">
-                <h1>Coastline Quick Start Guide</h1>
-              </h1><br>
-                <a class="btn-status-success" target="_self" href="http://www.coastlinemarket.com/img/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
-                <hr class="short">
-              </div>
-
-              <div class="row">
-                <div class="col-lg-6" align="left">
-                  <h3>Creating a Supply Chain</h3>
-                  <h4>1. Click the <i>Supply Chain</i> tab</h4>
-                  <h4>2. Click the <i>Create Supply Chain</i> button and give it a name</h4>
-                  <h4>3. Click the <i>Add</i> button to add the first intermediary in your supply chain</h4>
-                  <h4>4. Name your first intermediary, and press the green <i>OK</i> button</h4>
-                  <h4>5. Repeat steps (3) and (4), and connect intermediaries by using the <i>
-                  Previous Stage</i> dropdown</h4>
-                  <h4>6. Click <i>Save</i></h4>
-                </div>
-                <div class="col-lg-6">
-                  <img class="instructionImg" src="../img/create-chain.png"></img>
-                </div>
-              </div>
-              <hr class="short">
-
-              <div class="row">
-                <br>
-                <div class="col-lg-6" align="left">
-                  <h3>Adding a Product</h3>
-                  <h4>1. Click the <i>Products</i> tab</h4>
-                  <h4>2. Click the <i>Add Product</i> button</h4>
-                  <h4>3. Fill out the required info and click <i>Submit</i></h4>
-                </div>
-                <div class="col-lg-6">
-                  <img class="instructionImg" src="../img/add-product.png"></img>
-                </div>
-              </div>
-              <hr class="short">
-
-              <div class="row">
-                <br>
-                <div class="col-lg-6" align="left">
-                  <h3>Adding an Inventory Batch</h3>
-                  <h4>1. Click the <i>Inventory</i> tab</h4>
-                  <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
-                  <h4>3. From the visual supply chain, click the intermediary you'd like to add the batch to</h4>
-                  <h4>4. Once the destination is highlighted, click <i>View/Edit</i> Inventory</h4>
-                  <h4>5. Click the <i>Add</i> button</h4>
-                  <h4>6. Fill out the information and click <i>OK</i></h4>
-                </div>
-                <div class="col-lg-6">
-                  <img class="instructionImg" src="../img/add-batch.png"></img>
-                </div>
-              </div>
-              <hr class="short">
-
-              <div class="row">
-                <br>
-                <div class="col-lg-6" align="left">
-                  <h3>Moving Your Inventory</h4>
-                    <h4>1. Click the <i>Inventory</i> tab</h4>
-                    <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
-                    <h4>3. From the visual supply chain, click the intermediary that inventory is being moved from</h4>
-                    <h4>4. Once the target intermeidary is highlighted, click <i>View/Edit Inventory</i></h4>
-                    <h4>5. Click the inventory batch you wish to move</h4>
-                    <h4>6. Click the <i>Move</i> button</h4>
-                    <h4>7. From the <i>Move to Stage</i> dropdown, choose the intermediary that inventory is being moved to</h4>
-                    <h4>5. Click the <i>OK</i> button</h4>
-                </div>
-                <div class="col-lg-6">
-                  <img class="instructionImg" src="../img/move-batch.png"></img>
-                </div>
-              </div>
-              <hr class="short">
-
-              <div class="row">
-                <br>
-                <div class="col-lg-6" align="left">
-                  <h3>Creating a Selling Point</h3>
-                  <h4>1. Click the <i>Sales Channels</i> tab</h4>
-                  <h4>2. Click <i>Add Sales Channel</i></h4>
-                  <h4>3. Enter your desired Selling Point Name</h4>
-                  <h4>4. Check <i>Sell on e-commerce</i> to upload product to Coastline Market Shop</h4>
-                  <h4>5. Click the <i>OK</i> button</h4>
-                </div>
-                <div class="col-lg-6">
-                  <img class="instructionImg" src="../img/sell-point.png"></img>
-                </div>
-              </div>
-              <hr class="short">
-              <div class="row">
-                <br>
-                <div class="col-lg-6" align="left">
-                  <h3>Traceability from Catch to Consumer</h3>
-                  <h4>1. Click the <i>Inventory</i> tab</h4>
-                  <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
-                  <h4>3. From the visual supply chain, click the desired inventory source to track</h4>
-                  <h4>4. Once the destination is highlighted, click <i>View/Edit</i> Inventory</h4>
-                  <h4>5. Click the inventory batch you wish to track</h4>
-                  <h4>6. Click the <i>Batch Details</i> button</h4>
-                  <h4>7. The new window will display the historical data of the fish, along with its catcher and origin</h4>
-                </div>
-                <div class="col-lg-6">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/O9T-e-iIA1Y" frameborder="0" allowfullscreen></iframe>
-                </div>
-              </div>
+    <div class="container">
+      <div class="panel-container">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="panel-heading">
+              <h1>Coastline Quick Start Guide</h1>
+              <br>
+              <a class="btn-status-success btn-size-large" target="_self" href="http://www.coastlinemarket.com/img/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
+              <br><br>
               <hr class="short">
             </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/picuG_92HoQ?rel=0" frameborder="0" allowfullscreen></iframe>
+              </div>
+              <div class="col-lg-6">
+                <h4 align="left">Please refer to this video for a brief overview of the Coastline platform.
+                  <br>
+                  <br> For the detailed instruction guide (with step by step photo), please press the "<b>PDF Guide Download</b>" above.</h4>
+              </div>
+            </div>
+            <hr class="short">
+            <div class="row">
+              <div class="col-lg-6" align="left">
+                <h3>Creating a Supply Chain</h3>
+                <h4>1. Click the <i>Supply Chain</i> tab</h4>
+                <h4>2. Click the <i>Create Supply Chain</i> button and give it a name</h4>
+                <h4>3. Click the <i>Add</i> button to add the first intermediary in your supply chain</h4>
+                <h4>4. Name your first intermediary, and press the green <i>OK</i> button</h4>
+                <h4>5. Repeat steps (3) and (4), and connect intermediaries by using the <i>
+                  Previous Stage</i> dropdown</h4>
+                <h4>6. Click <i>Save</i></h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/supply-chain.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+
+            <div class="row">
+              <br>
+              <div class="col-lg-6" align="left">
+                <h3>Adding a Product</h3>
+                <h4>1. Click the <i>Products</i> tab</h4>
+                <h4>2. Click the <i>Add Product</i> button</h4>
+                <h4>3. Fill out the required info and click <i>Submit</i></h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/add-product.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+
+            <div class="row">
+              <br>
+              <div class="col-lg-6" align="left">
+                <h3>Adding an Inventory Batch</h3>
+                <h4>1. Click the <i>Inventory</i> tab</h4>
+                <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
+                <h4>3. From the visual supply chain, click the intermediary you'd like to add the batch to</h4>
+                <h4>4. Once the destination is highlighted, click <i>View/Edit</i> Inventory</h4>
+                <h4>5. Click the <i>Add</i> button</h4>
+                <h4>6. Fill out the information and click <i>OK</i></h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/add-batch.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+
+            <div class="row">
+              <br>
+              <div class="col-lg-6" align="left">
+                <h3>Moving Your Inventory</h4>
+                  <h4>1. Click the <i>Inventory</i> tab</h4>
+                  <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
+                  <h4>3. From the visual supply chain, click the intermediary that inventory is being moved from</h4>
+                  <h4>4. Once the target intermeidary is highlighted, click <i>View/Edit Inventory</i></h4>
+                  <h4>5. Click the inventory batch you wish to move</h4>
+                  <h4>6. Click the <i>Move</i> button</h4>
+                  <h4>7. From the <i>Move to Stage</i> dropdown, choose the intermediary that inventory is being moved to</h4>
+                  <h4>5. Click the <i>OK</i> button</h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/inventory.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+
+            <div class="row">
+              <br>
+              <div class="col-lg-6" align="left">
+                <h3>Creating a Selling Point</h3>
+                <h4>1. Click the <i>Sales Channels</i> tab</h4>
+                <h4>2. Click <i>Add Sales Channel</i></h4>
+                <h4>3. Enter your desired Selling Point Name</h4>
+                <h4>4. Check <i>Sell on e-commerce</i> to upload product to Coastline Market Shop</h4>
+                <h4>5. Click the <i>OK</i> button</h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/sell-point.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+            <div class="row">
+              <br>
+              <div class="col-lg-6" align="left">
+                <h3>Traceability from Catch to Consumer</h3>
+                <h4>1. Click the <i>Inventory</i> tab</h4>
+                <h4>2. Choose your desired supply chain by clicking <i>View/Edit</i></h4>
+                <h4>3. From the visual supply chain, click the desired inventory source to track</h4>
+                <h4>4. Once the destination is highlighted, click <i>View/Edit</i> Inventory</h4>
+                <h4>5. Click the inventory batch you wish to track</h4>
+                <h4>6. Click the <i>Batch Details</i> button</h4>
+                <h4>7. The new window will display the historical data of the fish, along with its catcher and origin</h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/trace.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+            <div class="row">
+              <div class="col-lg-6" align="left">
+                <h3>Order and Invoice Generation</h3>
+                <h4>1. Click the <i>Orders</i> tab</h4>
+                <h4>2. Click <i>Add Invoice</i></h4>
+                <h4>3. From <i>Add Order</i>, enter in all relevant fields and click <i>Submit</i></h4>
+                <h4>[All transactions through the e-commerce platform will automatically create an invoice]</h4>
+                <br>
+                <br>
+                <h3>Exporting invoices to PDF/Excel</h3>
+                <h4>1. Click the <i>Orders</i> tab</h4>
+                <h4>2. Select the order invoice you would like to export to PDF or Excel</h4>
+                <h4>3. Click <i>View Order Details</i></h4>
+                <h4>4. Click <i>Export to PDF or Export to Excel</i> to download the invoice to your computer</h4>
+              </div>
+              <div class="col-lg-6">
+                <img class="instructionImg" src="../img/export-pdf.png"></img>
+              </div>
+            </div>
+            <hr class="short">
+
           </div>
         </div>
       </div>
+    </div>
   </div>
-</div>
