--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3,6 +3,7 @@
  */
 @import url('http://fonts.googleapis.com/css?family=Roboto');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
 // @import url('http://fonts.googleapis.com/css?family=Lato+Light');
 $primary-background-color: #EEEEEE;
 $secondary-background-color: #E8E8E8;
@@ -39,7 +40,6 @@ body {
   color: $primary-font-color;
   max-width: 95%;
 }
-
 .panel {
   max-width: 100%;
   height: 100%;
@@ -62,7 +62,6 @@ body {
       &:focus {
         outline: none;
       }
-
     }
   }
 }
@@ -151,16 +150,14 @@ body {
     color: #fff;
   }
 }
-
 .navbar-toggle {
   border: none;
   margin-top: 16px;
 }
-
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-    background-color: $btn-default-color;
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
+  background-color: $btn-default-color;
 }
-
 @media screen and (max-width: 768px) {
   .hide {
     display: block!important;
@@ -314,10 +311,11 @@ fieldset[disabled] .btn-status-default.active {
   opacity: 0.5;
   outline: none;
 }
-a.btn-status-default:hover {
-    text-decoration: none;
-  }
-
+a.btn-status-default:hover,
+a.btn-status-default:active,
+a.btn-status-default:focus {
+  text-decoration: none;
+}
 .btn-status-danger {
   @include border-radius(2px);
   color: $secondary-background-color;
@@ -417,17 +415,17 @@ fieldset[disabled] .btn-status-success.active {
   opacity: 0.6;
   outline: none;
 }
-
 .btn-size-large {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 25px;
   padding-right: 25px;
 }
-a.btn-size-large:hover {
-    text-decoration: none;
-  }
-
+a.btn-size-large:hover,
+a.btn-size-large:active,
+a.btn-size-large:focus {
+  text-decoration: none;
+}
 input.search {
   @include border-radius(2px);
   padding: 8px 15px;
@@ -457,11 +455,9 @@ hr.short {
 div.modal-text {
   width: 80%;
 }
-
 .div-align-right {
-  float:right;
+  float: right;
 }
-
 table {
   display: table;
   border-collapse: separate;
@@ -490,10 +486,7 @@ table.tableWhite {
   vertical-align: middle;
   text-align: center;
 }
-
-
 @media screen and (max-width: 768px) {
-
   .table>tbody>tr>td,
   .table>tbody>tr>th,
   .table>tfoot>tr>td,
@@ -504,38 +497,31 @@ table.tableWhite {
     text-align: right;
     background-color: #fff;
   }
-
   table {
     border-radius: 20px;
     .tableWhite {
       border: none;
     }
   }
-
   .table-responsive {
     border: none;
   }
-
   tbody {
     background-color: $secondary-background-color;
     border: none;
   }
-
   table thead {
     display: none;
   }
   table tr {
     margin-bottom: 10px;
     display: block;
-
   }
   table td {
     content: attr(data-label);
     display: block;
     font-size: 13px;
-
   }
-
   table td:before {
     content: attr(data-label);
     font-weight: bold;
@@ -546,15 +532,11 @@ table.tableWhite {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
   }
-
   table td:last-child {
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
   }
 }
-
-
-
 select {
   padding: 6px 10px;
   border: 1px solid #bfbfbf;
