ngNotify added to move block

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -295,8 +295,8 @@
               <td data-label="Catch Date">{{block.catchDate | date:"M/d/y"}}</td>
               <td data-label="Region">{{block.catchRegion}}</td>
               <td data-label="Catcher">{{block.caughtBy}}</td>
-              <td data-label="Method">{{block.catchType}}</td>
-              <td data-label="Depth">{{block.waterDepth}}</td>
+              <td data-label="Method">{{block.processType}}</td>
+              <td data-label="Depth">{{block.jobNum}}</td>
             </tr>
           </tbody>
         </table>
