--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -1,6 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul ng-controller="SideNavCtrl" class="nav nav-sidebar">
-        <li class="active"><h1><b>Navigation</b></h1></li>
+        <li><h1>Navigation</h1><hr class="side-nav"></li>
         <!--<li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview</a></li>-->
         <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products">Products</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu">Supply Chain</a></li>
