--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -7,7 +7,7 @@
           <div class="panel-container">
             <div class="panel panel-default">
               <div class="panel-body">
-                <button ng-click="addProduct()" class="btn-status-default">Add Product</button>
+                <button ng-click="addProduct()" class="btn-status-success">Add Product</button>
                 <button ng-click="editProduct()" class="btn-status-default">Edit</button>
                 <button ng-click="deleteProduct(product._id)" class="btn-status-danger">Delete</button>
                 <!--<input type="text" name="search" placeholder="Search for an item" class="search">-->
