--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -40,15 +40,12 @@ body {
   color: $primary-font-color;
   max-width: 95%;
   margin-left: 10px;
-
 }
-
 .panel {
   max-width: 100%;
   height: 100%;
   border-color: $primary-border-color;
   background-color: $secondary-background-color;
-
   .panel-body {
     padding: none;
     background-color: $secondary-background-color;
@@ -67,7 +64,6 @@ body {
         outline: none;
       }
     }
-
   }
 }
 .panel-scroll {
@@ -85,20 +81,20 @@ body {
   height: 100%;
 }
 .vis-network .item {
-  /*background-color: #008CBA;*/
-  /*border-color: #008CBA;*/
-  /*color: #ffffff;*/
-  /*font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;*/
-  /*font-kerning: auto;*/
-  /*font-size: 13px;*/
-  /*font-style: normal;*/
-  /*font-variant: normal;*/
-  /*font-variant-ligatures: normal;*/
-  /*font-weight: normal;*/
+  background-color: #008CBA;
+  border-color: #008CBA;
+  color: #ffffff;
+  font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
+  font-kerning: auto;
+  font-size: 13px;
+  font-style: normal;
+  font-variant: normal;
+  font-variant-ligatures: normal;
+  font-weight: normal;
 }
 .vis-network .item.green {
-  background-color: green;
-  border-color: green;
+  background-color: red;
+  border-color: red;
   color: #ffffff;
 }
 .vis-network .item.red {
@@ -134,7 +130,7 @@ body {
   color: $primary-font-color;
 }
 .navbar-header .navbar-brand {
-  margin: 10px 10px 10px 10px;
+  margin: 10px;
   color: #fff;
   letter-spacing: 0.1em;
   font-size: 20px;
@@ -145,16 +141,16 @@ body {
   }
   @media screen and (max-width: 768px) {
     img {
-      margin-left: 0px;
+      margin-left: 0;
     }
   }
 }
-
-.navbar-header img:hover,.navbar-header img:active,.navbar-header img:focus,
-.navbar-header a:hover{
-    -webkit-filter: invert(35%);
+.navbar-header img:hover,
+.navbar-header img:active,
+.navbar-header img:focus,
+.navbar-header a:hover {
+  -webkit-filter: invert(35%);
 }
-
 .navbar-collapse .nav li {
   margin: 10px 5px;
   @include border-radius(2px);
@@ -186,9 +182,8 @@ body {
     width: 10px;
   }
 }
-iframe {
+iframe, iframe:active, iframe:focus, iframe:hover {
   max-width: 100%;
-  border-radius: 5px;
 }
 th {
   text-align: center;
@@ -225,11 +220,11 @@ th {
       font-weight: 700;
       letter-spacing: 1px;
       margin-left: 15px;
-      margin-top: 25px;
+      margin-top: 38px;
     }
     a {
       color: $primary-font-color;
-      font-size:15px;
+      font-size: 15px;
       &:hover {
         background-color: $navbar-color;
         @include border-radius(2px);
@@ -244,8 +239,8 @@ th {
       @include border-radius(2px);
       color: #fff;
     }
-    padding-right: 32px;
-    padding-left: 32px;
+    padding-right: 15px;
+    padding-left: 15px;
     margin: 10px 5px;
   }
 }
@@ -277,9 +272,7 @@ th {
   font-weight: 100;
   max-width: 88%;
   border-bottom: 2px solid $primary-border-color;
-
 }
-
 .btn-status-default {
   @include border-radius(2px);
   color: $secondary-background-color;
@@ -448,29 +441,29 @@ a.btn-size-large:active,
 a.btn-size-large:focus {
   text-decoration: none;
 }
-
 .form-control {
   border-radius: 2px;
 }
-
-input.form-control, select.form-control {
+input.form-control,
+select.form-control {
   border-radius: 2px;
   padding-top: 2px;
-  padding-bottom:2px;
+  padding-bottom: 2px;
   padding-left: 15px;
   background-color: #fff;
   border: 1px solid $primary-border-color;
   font-size: 14px;
 }
-input.form-control:focus, select.form-control:focus {
+input.form-control:focus,
+select.form-control:focus {
   padding-top: 2px;
-  padding-bottom:2px;
-  padding-left: 15px;  background-color: #fff;
+  padding-bottom: 2px;
+  padding-left: 15px;
+  background-color: #fff;
   border: 1px solid $primary-border-color;
   font-size: 14px;
   box-shadow: none;
 }
-
 .panel {
   border-radius: 5px;
   border: none;
@@ -495,11 +488,13 @@ hr.short {
 }
 hr.side-nav {
   border-color: #454545;
-  width: 65%;
-  border-width: 2px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  width: 85%;
+  border-width: 0.15em;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: 15px;
+  margin-right: 15px;
+  opacity: 0.6;
 }
 div.modal-text {
   width: 80%;
@@ -509,8 +504,7 @@ div.modal-text {
 }
 table {
   display: table;
-  border-collapse: separate;
-  border-spacing: 0;
+  border-collapse: collapse;
   border-color: grey;
   border-radius: 2px;
   border: 2px solid $secondary-border-color;
@@ -522,9 +516,13 @@ table.tableWhite {
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     vertical-align: middle;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   td {
     vertical-align: bottom;
+    padding-left: 0px;
+    padding-right: 0px;
 
   }
 }
@@ -536,6 +534,8 @@ table.tableWhite {
 .table>thead>tr>th {
   vertical-align: middle;
   text-align: center;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 @media screen and (max-width: 768px) {
   .table>tbody>tr>td,
@@ -547,11 +547,12 @@ table.tableWhite {
     vertical-align: middle;
     text-align: right;
     background-color: #fff;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   table {
     border-radius: 20px;
     border: none;
-
     .tableWhite {
       border: none;
     }
@@ -593,11 +594,11 @@ table.tableWhite {
 select {
   padding: 6px 10px;
   border: 1px solid #bfbfbf;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
 }
 /*
  * Placeholder dashboard ideas
