--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -19,24 +19,24 @@
                 <table class="table tableWhite">
                   <thead>
                     <tr>
+                      <th>Select</th>
                       <th>Invoice #</th>
                       <th>Customer Name</th>
                       <th>Status</th>
                       <th>Date and Time </th>
                       <th>Total Amount</th>
-                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr ng-repeat="order in orders track by $index">
+                      <td data-label="Select">
+                        <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
+                      </td>
                       <td data-label="Invoice">{{order.invoiceNumber}}</td>
                       <td data-label="Name">{{order.customerName}}</td>
                       <td data-label="Status">{{order.status}}</td>
                       <td data-label="Date">{{order.date | date:'short' }}</td>
                       <td data-label="Subtotal">${{totals[$index]}}</td>
-                      <td data-label="Select">
-                        <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
-                      </td>
                     </tr>
                   </tbody>
                 </table>
