--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -19,7 +19,7 @@
                   <table class="table tableWhite">
                     <thead>
                       <tr>
-                        <th></th>
+                        <th>Select</th>
                         <th>Product Name</th>
                         <th>Unit Price</th>
                         <th>Description</th>
