--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -6,7 +6,7 @@
         <div class="panel-container">
           <div class="panel panel-default">
             <div class="panel-body">
-              <button ng-click="createNewSupplyChain()" class="btn-status-default">Create Supply Chain</button>
+              <button ng-click="createNewSupplyChain()" class="btn-status-success">Create Supply Chain</button>
             </div>
           </div>
         </div>
